<?xml version="1.0"?>
<?xml-model
   href="http://download.ros.org/schema/package_format3.xsd"
   schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
 <name>drone</name>
 <version>3.5.5</version>
 <description>ROS2 Node leveraging MAVSDK to expose the flight controller to ROS</description>
 <maintainer email="eslaghuis@gmail.com">user</maintainer>
 <license>Apache License 2.0</license>

 <buildtool_depend>ament_cmake</buildtool_depend>

 <depend>rclcpp</depend>
 <depend>rclcpp_action</depend>
 <depend>rclcpp_components</depend>
 <depend>tf2</depend>
 <depend>tf2_ros</depend>

 <depend>std_msgs</depend>
 <depend>geometry_msgs</depend>
 <depend>nav_msgs</depend>
 <depend>drone_interfaces</depend>

 <test_depend>ament_lint_auto</test_depend>
 <test_depend>ament_lint_common</test_depend>

 <export>
   <build_type>ament_cmake</build_type>
 </export>
</package>
